# ML-Intrusion-Detection-Technique

./: .dockerignore  .gitignore  Dockerfile  README.md  ddos_detection.ipynb  pyproject.toml  requirements.txt
api/: __init__.py  main.py
models/: .gitkeep  ddos_model.pkl  feature_names.pkl  preprocessing_config.pkl  scaler.pkl
src/: __init__.py  config.py  model.py  preprocessing.py
static/: index.html
