[project]
name = "anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "ipykernel>=6.25.0",
    "joblib>=1.3.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "uvicorn[standard]>=0.24.0",
    "xgboost>=2.0.0",
]
